syntax = "proto3";

package proto;

option go_package = "github.com/fission/fission/pkg/executor/proto";

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

service Echo {
    rpc UnaryEcho (EchoRequest) returns (EchoResponse);
}